@@ -1,3 +1,7 @@
+Wed Jan 28 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* drawboard3d.c, misc3d.c: 3d quick draw-chequer target help added
+
 Tue Jan 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* drawboard3d.c, misc3d.c: 3d quick draw flag waving code
